# Ironfell

./: .gitignore  .gitmodules  Cargo.lock_2  Cargo.lock_old  Cargo.toml  README.md  build-wasm.sh  bun.lockb  deploy.sh  index.html  inspector_update.json  package.json  rust-toolchain.toml  tsconfig.app.json  vite.config.ts  wasm-run.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
bevy_remote_inspector/src/: lib.rs
opt/: ironfell.d.ts
plans/: deferred-3d-image-target.md  hybrid-ui-layout.md  perf-grid-runbook.md  single-canvas-migration.md
src/: asset_loader.rs  bevy_app.rs  camera_controller.rs  ffi_inspector_bridge.rs  fps_overlay.rs  lib.rs  not_used_bevy_remote_stream.rs  overlay.rs  panels.rs  ray_pick.rs  tracking_circle.rs  type_registry.rs  web_ffi.rs
src-ui/: App.svelte  app.css  canvas_control.ts  canvas_manager.ts  control.svelte.ts  controller-manager.svelte.ts  main-thread-adapter.ts  main.ts  panel_manager.ts  system_state.svelte.ts  system_state.ts  ui-state.svelte.ts  vite-env.d.ts  worker.ts
src-ui/lib/: BevyPanel.svelte  Controls.svelte  Github.svelte  Scene.svelte  SplitPane5.svelte  WebGPUWarning.svelte
src-ui/runtime/: adapter_bridge.ts  cadence_probe.ts  input_manager.ts  inspector_client.ts  render_session.ts  resize_manager.ts  session_adapter.ts  wasm_loader.ts
src-ui/types/: bevy.ts  component.ts  entity.ts  message.ts  registry.ts  schedule.ts
src-ui/wasm/: ironfell.js  ironfell_bg.d.ts
src/asset_reader/: mod.rs  web_asset_plugin.rs  web_asset_source.rs
src/bevy_app/: input_accum.rs  interaction.rs  mod.rs  overlay2d.rs  picking.rs  pointer.rs  scene3d.rs  timeline.rs  ui_panels.rs
src/bevy_remote_inspector/: Cargo.toml
src/bevy_remote_inspector/src/: command.rs  component.rs  entity.rs  lib.rs  lib_complex.rs  lib_simple.rs  schedule.rs  type_registry.rs
src/canvas_view/: canvas_view_plugin.rs  mod.rs
testing_latency/: .gitignore  Evaluation_RAF_trigger.md  README.md  WORKER_LATENCY_RESEARCH_BRIEF.md  build-rust.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
testing_latency/public/wasm/: latency_rust.d.ts  latency_rust.js  latency_rust_bg.wasm.d.ts
testing_latency/results/temp/: 2026-06-27T20-26-07-508Z_rust-winit-main_manual.json
testing_latency/rust/: Cargo.toml
testing_latency/rust/src/: lib.rs
testing_latency/src/: analysis.ts  main.ts  style.css
testing_latency/src/apps/: canvas2d-event.ts  canvas2d-raf.ts  index.ts  main-thread-probe.ts  rust-wasm-app.ts  webgl-raf.ts  webgpu-raf.ts  worker-raf-phase-probe.ts  worker-webgpu-buffered.ts  worker-webgpu-sab-main-raf-triggered.ts  worker-webgpu-sab-timeout-triggered.ts  worker-webgpu-sab.ts  worker-webgpu.ts  worker2d-sab.ts  worker2d.ts
testing_latency/src/runner/: analyze-manual-results.ts  generate-analysis-data.ts  run-playwright.ts
testing_latency/src/shared/: guided-store.ts  paths.ts  protocol.ts  recorder.ts  reference-overlay.ts  render.ts  sab-pointer.ts
testing_latency/src/workers/: rust-wasm-worker.ts  worker-raf-phase-probe.ts  worker-webgpu-buffered.ts  worker-webgpu-sab-main-raf-triggered.ts  worker-webgpu-sab-timeout-triggered.ts  worker-webgpu-sab.ts  worker-webgpu.ts  worker2d-sab.ts  worker2d.ts
