[workspace]
members = [".", "src/bevy_remote_inspector"]

[workspace.dependencies]
bevy = { version = "0.16", features = [
    "std",
    "bevy_pbr",
    "bevy_gizmos",
    "tonemapping_luts",
    "webgpu",
    "bevy_window",
    "bevy_log",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "bevy_image",
    "png",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[package]
name = "ironfell"
description = "bringing science to life"
authors = ["Andrew Mueller"]
version = "0.0.1"
edition = "2024"
# rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_remote_inspector = { path = "./src/bevy_remote_inspector" }


app-surface = { version = "1.5.3", features = ["web_rwh"] }
raw-window-handle = "0.6"
wgpu = "24"
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8"
# Web only
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "MouseEvent",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "Event",
    "MessageEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Request",
    "RequestInit",
    "Response",
] }
js-sys = "0.3.77"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1
incremental = false
debug = false
strip = true


# works
[profile.dev-opt]
inherits = "release"
debug-assertions = false # breaks build if true
opt-level = 1
lto = false
codegen-units = 256
debug = true
overflow-checks = true
