[workspace]

[package]
name = "latency_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "=0.3.78"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.101"
wasm-bindgen-futures = "=0.4.51"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24.0.5"
bevy = { version = "0.16.1", default-features = false, features = [
  "std",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_window",
  "bevy_winit",
  "webgpu",
] }

web-sys = { version = "=0.3.78", features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "Performance",
  "Window",
] }
